--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project name="Custom Buttons"
 		 default="buildxpi"
 		 basedir=".">
@@ -56,7 +56,7 @@
 			<arg value="-P"/>
 			<arg value="-CC"/>
 			<srcfile/>
-			<redirector>
+			<redirector inputencoding="UTF-8" outputencoding="UTF-8">
 				<outputfilterchain>
 					<linecontains negate="true"> <!-- and no grep needed now -->
 						<contains value="{--exclude-this-line}"/>
