+ Added: uptodate check for *.inc files * Code cleaning

--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,27 @@
 	<target name="init">
 		<!-- Create the time stamp -->
 		<tstamp/>
+		<patternset id="xpipatternset">
+			<include name="chrome.manifest"/>
+			<include name="install.rdf"/>
+			<include name="changelog.txt"/>
+			<include name="license.txt"/>
+			<include name="defaults/**/*.*"/>
+			<include name="components/**/*.*"/>
+			<exclude name="build.number"/>
+		</patternset>
+		<patternset id="excludespatternset">
+			<exclude name="**/Thumbs.db"/>
+			<exclude name="**/*.sjs"/>
+			<exclude name="**/*.hjs"/>
+			<exclude name="**/*.ijs"/>
+			<exclude name="**/*.sxml"/>
+			<exclude name="**/*.ixml"/>
+			<exclude name="**/*.idl"/>
+			<exclude name="**/*.inc"/>
+			<exclude name="**/*.smanifest"/>
+			<exclude name="**/.*"/>
+		</patternset>
 		<uptodate property="checkLibs.forcedJSPreprocess" targetfile="build.number">
 			<srcfiles dir="${basedir}" includes="**/*.ijs"/>
 			<srcfiles dir="${basedir}" includes="**/*.hjs"/>
@@ -33,10 +54,14 @@
 		<uptodate property="checkLibs.forcedXMLPreprocess" targetfile="build.number">
 			<srcfiles dir="${basedir}" includes="**/*.ixml"/>
 		</uptodate>
+		<uptodate property="checkLibs.forcedOtherPreprocess" targetfile="build.number">
+			<srcfiles dir="${basedir}" includes="**/*.inc"/>
+		</uptodate>
 		<condition property="checkLibs.forcedPreprocess" value="false" else="true">
 			<and>
 				<istrue value="${checkLibs.forcedJSPreprocess}"/>
 				<istrue value="${checkLibs.forcedXMLPreprocess}"/>
+				<istrue value="${checkLibs.forcedOtherPreprocess}"/>
 			</and>
 		</condition>
 		<buildnumber/>
@@ -53,6 +78,7 @@
 		<mapper id="preprocessormapper">
 			<mapper type="glob" from="*.sjs" to="*.js"/>
 			<mapper type="glob" from="*.sxml" to="*.xml"/>
+			<mapper type="glob" from="*.smanifest" to="*.manifest"/>
 		</mapper>
 		<apply executable="cpp.exe"
 			   failonerror="true"
@@ -60,6 +86,7 @@
 			<fileset dir="${basedir}">
 				<include name="**/*.sjs"/>
 				<include name="**/*.sxml"/>
+				<include name="**/*.smanifest"/>
 			</fileset>
 			<mapper refid="preprocessormapper"/>
 			<arg value="-I"/>
@@ -68,6 +95,7 @@
 			<arg value="${xpistdinc}"/>
 			<arg value="-I"/>
 			<arg value="${projectinc}"/>
+			<arg value="-ansi"/>
 			<arg value="-P"/>
 			<arg value="-CC"/>
 			<srcfile/>
@@ -103,16 +131,19 @@ Define it in build.properties (don't forget about double back slashes)</fail>
 	<target name="buildjar" depends="init,preprocess">
 		<zip destfile="${basedir}/chrome/${jarname}.jar"
 			 compress="false" level="0"> <!-- and no 7-zip needed now -->
-			<fileset dir="${basedir}/chrome/${jarname}">
+			<fileset id="jarfileset" dir="${basedir}/chrome/${jarname}">
 				<include name="**/*.*"/>
-				<exclude name="**/Thumbs.db"/>
-				<exclude name="**/*.sjs"/>
-				<exclude name="**/*.hjs"/>
-				<exclude name="**/*.ijs"/>
-				<exclude name="**/*.sxml"/>
-				<exclude name="**/*.ixml"/>
-				<exclude name="**/*.idl"/>
-				<exclude name="**/.*"/>
+				<patternset refid="excludespatternset"/>
+				<!-- 0.0.3.8 excludes -->
+				<!--
+				<exclude name="content/custombuttons/customizeToolbars.xul"/>
+				<exclude name="content/custombuttons/customizeToolbars.js"/>
+				<exclude name="content/custombuttons/overlay3b2.xul"/>
+				-->
+				<!-- common excludes -->
+				<exclude name="content/custombuttons/editor.html"/>
+				<exclude name="content/custombuttons/addMoreKeysDialog.xul"/>
+				<exclude name="content/custombuttons/addMoreKeysDialog.js"/>
 			</fileset>
 		</zip>
 	</target>
@@ -132,23 +163,10 @@ Define it in build.properties (don't forget about double back slashes)</fail>
 		<zip destfile="${xpiname}-${Description.em:version}-${DSTAMP}.xpi"
 			 compress="true" level="9"> <!-- and no 7-zip, pack.bat needed now -->
 			<fileset dir="${basedir}">
-				<include name="chrome.manifest"/>
-				<include name="install.rdf"/>
-				<include name="install.rdf"/>
-				<include name="changelog.txt"/>
-				<include name="license.txt"/>
+				<patternset refid="xpipatternset"/>
 				<include name="chrome/**/*.*"/>
-				<include name="defaults/**/*.*"/>
-				<include name="components/**/*.*"/>
-				<exclude name="build.number"/>
 				<exclude name="chrome/*.jar"/>
-				<exclude name="**/*.sjs"/>
-				<exclude name="**/*.hjs"/>
-				<exclude name="**/*.ijs"/>
-				<exclude name="**/*.sxml"/>
-				<exclude name="**/*.ixml"/>
-				<exclude name="**/*.idl"/>
-				<exclude name="**/.*"/>
+				<patternset refid="excludespatternset"/>
 			</fileset>
 		</zip>
 	</target>
@@ -168,21 +186,15 @@ Define it in build.properties (don't forget about double back slashes)</fail>
 		<zip destfile="${xpiname}-${Description.em:version}-${DSTAMP}.xpi"
 			 compress="true" level="9"> <!-- and no 7-zip, pack.bat needed now -->
 			<fileset dir="${basedir}">
-				<include name="chrome.manifest"/>
-				<include name="install.rdf"/>
-				<include name="changelog.txt"/>
-				<include name="license.txt"/>
+				<patternset refid="xpipatternset"/>
 				<include name="chrome/${jarname}.jar"/>
-				<include name="defaults/**/*.*"/>
-				<include name="components/**/*.*"/>
-				<exclude name="build.number"/>
-				<exclude name="**/*.sjs"/>
-				<exclude name="**/*.hjs"/>
-				<exclude name="**/*.ijs"/>
-				<exclude name="**/*.sxml"/>
-				<exclude name="**/*.ixml"/>
-				<exclude name="**/*.idl"/>
-				<exclude name="**/.*"/>
+				<patternset refid="excludespatternset"/>
+				<!-- common excludes -->
+				<exclude name="components/CBStorageService.xpt"/>
+				<exclude name="components/customhttpprotocol2.xpt"/>
+				<exclude name="components/customhttpprotocol3.xpt"/>
+				<exclude name="components/customhttpprotocol2.js"/>
+				<exclude name="components/customhttpprotocol3.js"/>
 			</fileset>
 		</zip>
 	</target>
