Apply proposed changes by Infocatcher
--HG--
branch : bug24343
rename : chrome/custombuttons/content/custombuttons/button.js => chrome/button.js

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
 			<include name="defaults/**/*.*"/>
 			<include name="components/**/*.*"/>
 			<include name="chrome/icons/**/*.*"/>
+			<include name="chrome/button.js"/>
 			<exclude name="build.number"/>
 		</patternset>
 		<patternset id="excludespatternset">
