--- a/build.xml
+++ b/build.xml
@@ -182,98 +182,26 @@ Define it in build.properties (don't forget about double back slashes)</fail>
 			<fileset id="jarfileset" dir="${basedir}/chrome/${jarname}">
 				<include name="**/*.*"/>
 				<patternset refid="excludespatternset"/>
-				<!-- 0.0.3.8 excludes -->
-				<!--
-				<exclude name="content/custombuttons/customizeToolbars.xul"/>
-				<exclude name="content/custombuttons/customizeToolbars.js"/>
-				<exclude name="content/custombuttons/overlay3b2.xul"/>
-				-->
 				<!-- common excludes -->
-				<exclude name="content/custombuttons/editor.html"/>
-				<exclude name="content/custombuttons/addMoreKeysDialog.xul"/>
-				<exclude name="content/custombuttons/addMoreKeysDialog.js"/>
-				<exclude name="content/custombuttons/jsVer1.js"/>
-				<exclude name="content/custombuttons/jsVer2.js"/>
-				<exclude name="content/custombuttons/jsVer3.js"/>
-				<exclude name="content/custombuttons/jsVer4.js"/>
-				<exclude name="content/custombuttons/codeeditor2.xml"/>
-				<!-- 0.0.3.9 excludes -->
-				
-				<exclude name="content/custombuttons/cbbutton1.5.xul"/>
-				<!--
-				<exclude name="content/custombuttons/cbbutton.xul"/>
-				-->
-				<exclude name="content/custombuttons/cbbutton3.xul"/>
-				<exclude name="content/custombuttons/loader.js"/>
-				<!-- 0.0.4.0a excludes -->
-				
-				<exclude name="content/custombuttons/editor.js"/>
-				<exclude name="content/custombuttons/edit.xul"/>
 				<exclude name="skin/classic/button1.png"/>
-				<!-- 0.0.4.1 excludes -->
-				
-				<exclude name="content/custombuttons/codeeditor.xml"/>
-				<!-- 0.0.4.2a excludes -->
-				
-				<exclude name="content/custombuttons/buttonsoverlay.js"/>
 				
 			</fileset>
 
 		</zip>
 	</target>
 	
-	<target name="buildxpiwithoutjar" depends="init,preprocess,buildxpt"
-			unless="keep_jar">
-			<!--
-		<replaceregexp file="${basedir}/chrome.manifest" byline="true">
-			<regexp pattern="^(content\s+${appname}\s+)jar:chrome\/${jarname}\.jar!(\/\S*\/)$"/>
-  			<substitution expression="\1chrome/${appname}\2"/>
-		</replaceregexp>
-		<replaceregexp file="${basedir}/chrome.manifest" byline="true">
-			<regexp pattern="^(skin|locale)(\s+\S*\s+\S*\s+)jar:chrome\/${jarname}\.jar!(\/.*\/)$"/>
-  			<substitution expression="\1\2chrome/${jarname}\3"/>
-		</replaceregexp>
-			-->
-		<zip destfile="${xpiname}-${Description.em:version}-${DSTAMP}.xpi"
-			 compress="true" level="9"> <!-- and no 7-zip, pack.bat needed now -->
-			<fileset dir="${basedir}">
-				<patternset refid="xpipatternset"/>
-				<include name="chrome/**/*.*"/>
-				<exclude name="chrome/*.jar"/>
-				<patternset refid="excludespatternset"/>
-			</fileset>
-		</zip>
-	</target>
-	
 	<target name="buildxpiwithjar" depends="init,preprocess,buildxpt,buildjar"
 			if="keep_jar">
-			<!--
-		<replaceregexp file="${basedir}/chrome.manifest" byline="true">
-			<regexp pattern="^(content\s+${appname}*\s+)chrome\/${appname}(\/\S*\/)$"/>
-  			<substitution expression="\1jar:chrome\/${jarname}\.jar!\2"/>
-		</replaceregexp>
-		<replaceregexp file="${basedir}/chrome.manifest" byline="true">
-			<regexp pattern="^(skin|locale)(\s+\S*\s+\S*\s+)chrome\/${appname}(\/.*\/)$"/>
-  			<substitution expression="\1\2jar:chrome\/${jarname}\.jar!\3"/>
-		</replaceregexp>
-			-->
 		<zip destfile="${xpiname}-${Description.em:version}-${DSTAMP}.xpi"
 			 compress="true" level="9"> <!-- and no 7-zip, pack.bat needed now -->
 			<fileset dir="${basedir}">
 				<patternset refid="xpipatternset"/>
 				<include name="chrome/${jarname}.jar"/>
 				<patternset refid="excludespatternset"/>
-				<!-- common excludes -->
-				<exclude name="components/CBStorageService.xpt"/>
-				<exclude name="components/customhttpprotocol2.xpt"/>
-				<exclude name="components/customhttpprotocol3.xpt"/>
-				<exclude name="components/customhttpprotocol2.js"/>
-				<exclude name="components/customhttpprotocol3.js"/>
-				<exclude name="components/CBRDFService.js"/>
 			</fileset>
 		</zip>
 	</target>
 	
-	<target name="buildxpi" depends="buildxpiwithjar,buildxpiwithoutjar"/>
+	<target name="buildxpi" depends="buildxpiwithjar"/>
 	
 </project>
